# QBox

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routers/: __init__.py  accounts.py  backtests.py  data.py  quant.py  strategies.py
backend/app/services/: __init__.py  account.py  backtesting.py  data_generation.py  data_tasks.py  longport_client.py  quant_trading.py  quote_utils.py
backend/app/services/strategies/: __init__.py  base.py  moving_average.py
backend/app/utils/: file_storage.py  id_generator.py  scheduler.py  trading_sessions.py
backend/storage/logs/backtests/: test_9eg8aqy4.meta.json
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Dialog.tsx  PriceChart.tsx  StatusBadge.tsx
frontend/src/pages/: AccountPage.tsx  BacktestManagementPage.tsx  DataManagementPage.tsx  QuantTradingPage.tsx  StrategyManagementPage.tsx
frontend/src/styles/: global.css
frontend/src/utils/: tradingSessions.ts
